--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
-  "name": "youtube-transcript-api",
+  "name": "youtube-transcript-mcp",
   "version": "1.0.0",
-  "scripts": {
-    "start": "node api/transcript.js"
-  },
+  "type": "module",
   "dependencies": {
-    "youtube-transcript": "^1.0.6"
+    "youtube-transcript": "latest"
   }
 }
